[package]
name = "columnar_derive"
version = "0.0.1"
authors = ["Moritz Hoffmann <antiguru@gmail.com>"]
homepage = "https://github.com/antiguru/columnar-rs"
repository = "https://github.com/antiguru/columnar-rs.git"
description = "Columnar data format in memory (Derive)"
license = "MIT OR Apache-2.0"

[lib]
name = "columnar_derive"
proc-macro = true

[features]
default = []
verbose = [ "rustfmt" ]

[dependencies]
syn = "0.11"
quote = "0.3"
rustfmt = { version = "0.9", optional = true }
